# ROIAlign-onnx-modules

./: .gitignore  01_dynamic_roi_align.py  02_dynamic_roi_align_yolo.py  03_dynamic_roi_align_vit.py  04_merge_yolo_dynamic_roi_align.py  05_merge_vit_dynamic_roi_align.py  README.md  dynamic_roi_align.py  dynamic_roi_align_core.py  pyproject.toml
sample/: dynamic_roi_align.onnx  dynamic_roi_align_vit.onnx  dynamic_roi_align_vit_1class.onnx  dynamic_roi_align_vit_n-groups_n-classes.onnx  dynamic_roi_align_yolo.onnx  dynamic_roi_align_yolo_1class.onnx  dynamic_roi_align_yolo_n-groups_n-classes.onnx
