[project]
name = "roialign-onnx-modules"
version = "1.0.0"
description = "Various implementations of DynamicRoIAlign"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "requests==2.32.5",
    "numpy==1.26.4",
    "onnx==1.20.1",
    "onnxruntime==1.24.1",
    "opencv-python==4.11.0.86",
    "onnxsim-prebuilt==0.4.39.post2",
    "onnxoptimizer==0.4.2",
    "ai-edge-litert==2.1.2",
    "tensorflow==2.19.0",
    "tf-keras==2.19.0",
    "sne4onnx==2.0.1",
    "sng4onnx==2.0.1",
    "psutil==5.9.5",
    "protobuf==4.25.5",
    "h5py==3.12.1",
    "ml_dtypes==0.5.1",
    "flatbuffers==25.12.19",
    "tqdm==4.67.1",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.uv]
override-dependencies = [
    "onnx==1.20.1",
    "onnxsim-prebuilt==0.4.39.post2",
    "ml-dtypes==0.5.1",
    "numpy==1.26.4",
]

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    ".direnv/**",
    ".venv/**",
]